--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="Select a password length and options to generate a password"
             aria-label="Generated Password"
           ></textarea>
           <!-- Added Checkboxes and input for a better and easy navigation-->
